--- a/lab4/pom.xml
+++ b/lab4/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>CS61B</groupId>
-    <artifactId>proj1</artifactId>
+    <artifactId>lab4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -24,8 +24,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>1.14</source>
+                    <target>1.14</target>
                 </configuration>
             </plugin>
             <plugin>
